# home-health-provider-skeleton

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: .coveragerc  Dockerfile  conftest.py  manage.py  pyproject.toml  pytest.ini
apps/api/accounts/: managers.py  models.py  serializers.py  urls.py  views.py
apps/api/accounts/migrations/: 0001_initial.py
apps/api/accounts/tests/: test_login.py  test_login_edges.py  test_refresh.py  test_user_model.py  test_ws_token.py  test_ws_token_roles.py
apps/api/clinicians/: apps.py  models.py  position_serializers.py  position_views.py  serializers.py  urls.py  views.py
apps/api/clinicians/migrations/: 0001_initial.py  0002_clinicianposition.py
apps/api/clinicians/tests/: test_clinician_api.py  test_clinician_model.py  test_clinician_position_model.py  test_position_api.py  test_position_events.py
apps/api/core/: events.py  permissions.py  urls.py  views.py  viewsets.py
apps/api/core/tests/: test_events.py  test_events_integration.py  test_health.py  test_permissions.py
apps/api/hhps/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
apps/api/messaging/: models.py  patient_confirm.py  public_views.py  serializers.py  urls.py  views.py
apps/api/messaging/migrations/: 0001_initial.py
apps/api/messaging/tests/: test_patient_confirm.py  test_sms_api.py  test_sms_outbox_model.py
apps/api/patients/: models.py  serializers.py  urls.py  views.py
apps/api/patients/migrations/: 0001_initial.py
apps/api/patients/tests/: test_patient_api.py  test_patient_model.py
apps/api/reporting/: metabase_bootstrap.py  models.py  rollup.py  tasks.py
apps/api/reporting/migrations/: 0001_initial.py  0002_schema_separation.py
apps/api/reporting/tests/: test_metabase_bootstrap.py  test_models.py  test_rollup.py  test_schema_separation.py  test_tasks.py
apps/api/routing/: models.py  serializers.py  urls.py  views.py
apps/api/routing/migrations/: 0001_initial.py
apps/api/routing/tests/: test_route_plan_api.py  test_route_plan_model.py
apps/api/scheduling/: adapter.py  distance.py  ranker.py  rerank.py  tasks.py  training.py  urls.py  views.py  vrp.py
apps/api/scheduling/tests/: test_adapter.py  test_adapter_edges.py  test_celery_ping.py  test_distance.py  test_distance_edges.py  test_optimize_api.py  test_optimize_day.py  test_optimize_day_events.py  test_optimize_day_redis_integration.py  test_ranker.py  test_rerank.py  test_training.py  test_vrp.py  test_vrp_edges.py  test_vrp_rerank.py
apps/api/seed/tests/: test_clinician_login_flag.py  test_seed_demo.py
apps/api/tenancy/: managers.py  middleware.py  models.py
apps/api/tenancy/migrations/: 0001_initial.py
apps/api/tenancy/tests/: test_middleware.py  test_scoped_manager.py  (+1 more)
apps/api/visits/: models.py  serializers.py  services.py  urls.py  views.py
(+113 files in other folders)
