[project]
name = "hhps-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "django==5.0.*",
  "djangorestframework==3.15.*",
  "djangorestframework-simplejwt==5.3.*",
  "psycopg[binary]==3.2.*",
  "python-dotenv==1.0.*",
  "redis==5.0.*",
  "celery==5.4.*",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.*",
  "pytest-django==4.9.*",
  "ruff==0.6.*",
  "mypy==1.11.*",
  "django-stubs==5.0.*",
  "djangorestframework-stubs==3.15.*",
]

[tool.uv]
# Run-from-source Django project, not distributed as a wheel.
package = false
